# subnet-ping-api

./: .dockerignore  .env_bak  .env_container  .gitignore  Dockerfile  README.md  docker-compose-old.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  wait-for-it.sh
subnet_ip/: admin.py  apps.py  models.py  tasks2.py  urls.py  views.py
subnet_ip/api/: serializers.py  urls.py  views.py
subnet_ip/migrations/: 0001_initial.py  0002_alter_ipprefix_ping_task_state.py
subnet_ip/service/: __init__.py  ping_to_subnets.py
subnet_ip/static/: main.js  style.css
subnet_ip/tasks/: __init__.py  ping_to_subnets_task.py
subnet_ip/templates/: base.html  index.html  subnet.html
subnet_ip/templates/partials/: task_state.html
subnet_ip_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_models.py
tests/api/: test_serializers.py  test_views.py
tests/service/: test_ping_to_subnets.py
tests/tasks/: test_ping_to_subnets_task.py
